--- a/assets/scss/components/_feedback.scss
+++ b/assets/scss/components/_feedback.scss
@@ -53,10 +53,11 @@
 				}
 			}
 
-			span {
+			cite {
 				display: block;
 				margin-top: 1rem;
 				font-weight: 700;
+				font-size: 1rem;
 				color: $M-01;
 				text-align: center;
 			}
