--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1206,10 +1206,11 @@ main .benefits ol li:nth-of-type(4)::before {
   height: 0;
   visibility: hidden;
 }
-.feedback ul li span {
+.feedback ul li cite {
   display: block;
   margin-top: 1rem;
   font-weight: 700;
+  font-size: 1rem;
   color: #4b58a0;
   text-align: center;
 }
