--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1009,35 +1009,35 @@ main .benefits ol li:nth-of-type(4)::before {
   position: absolute;
   bottom: 2rem;
 }
-.news__others {
+.news__others, .news__others--home {
   margin: 8rem auto;
 }
-.news__others ul {
+.news__others ol, .news__others--home ol {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 1rem 0;
 }
-.news__others ul figure {
+.news__others ol li figure, .news__others--home ol li figure {
   position: relative;
   width: 17rem;
   margin: 1rem;
   padding: 0 0.5rem;
 }
-.news__others ul figure figcaption {
+.news__others ol li figure figcaption, .news__others--home ol li figure figcaption {
   margin: 0.5rem 0;
   font-weight: 700;
   font-size: 1.2em;
   color: #4b58a0;
   text-transform: uppercase;
 }
-.news__others ul figure p {
+.news__others ol li figure p, .news__others--home ol li figure p {
   position: relative;
   width: 35ch;
   font-size: 0.85em;
   line-height: 1.2em;
 }
-.news__others ul figure p::after {
+.news__others ol li figure p::after, .news__others--home ol li figure p::after {
   content: "";
   text-align: right;
   position: absolute;
@@ -1047,17 +1047,34 @@ main .benefits ol li:nth-of-type(4)::before {
   height: 1.2em;
   background: linear-gradient(to right, transparent, #f9fafb 50%);
 }
-.news__others ul figure img {
-  height: 180px;
+.news__others ol li figure img, .news__others--home ol li figure img {
+  display: block;
+  height: 10.625rem;
+  width: 16.25rem;
+  -o-object-fit: cover;
+  object-fit: cover;
   margin-top: 1rem;
   padding-top: 0.5rem;
   border-top: 2px solid #4b58a0;
 }
-.news__others ul figure > a {
+.news__others ol li figure > a, .news__others--home ol li figure > a {
   position: absolute;
   bottom: 0.5rem;
   right: 0.5rem;
   box-shadow: 0 0 0 1.25rem #f9fafb;
+}
+.news__others--home::after, .news__others--home--home::after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0;
+  width: 15.1rem;
+  height: 36rem;
+  margin-top: -1.35rem;
+  background: #f5a794;
+  -webkit-mask: url(../img/triangle-right.svg) center/cover no-repeat;
+  mask: url(../img/triangle-right.svg) center/cover no-repeat;
+  z-index: 2;
 }
 
 .news.wrapper {
