--- a/assets/scss/components/_news.scss
+++ b/assets/scss/components/_news.scss
@@ -158,17 +158,18 @@
 		}
 	}
 
-	&__others {
+	&__others,
+	&__others--home {
 		margin: 8rem auto;
 
-		ul {
+		ol {
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
 
 			margin: 1rem 0;
 
-			figure {
+			li figure {
 				position: relative;
 				width: 17rem;
 				margin: 1rem;
@@ -205,7 +206,10 @@
 				}
 
 				img {
-					height: 180px;
+					display: block;
+					height: 10.625rem;
+					width: 16.25rem;
+					object-fit: cover;
 					margin-top: 1rem;
 					padding-top: 0.5rem;
 					border-top: 2px solid $M-01;
@@ -218,6 +222,19 @@
 					box-shadow: 0 0 0 1.25rem $G-01;
 				}
 			}
+		}
+
+		&--home::after {
+			content: "";
+			display: block;
+			position: absolute;
+			right: 0;
+			width: 15.1rem;
+			height: 36rem;
+			margin-top: -1.35rem;
+			background: $M-02;
+			mask: url(../img/triangle-right.svg) center/cover no-repeat;
+			z-index: 2;
 		}
 	}
 }
