--- a/assets/scss/components/_news.scss
+++ b/assets/scss/components/_news.scss
@@ -1,7 +1,8 @@
 @use "../abstracts" as *;
 
 .news {
-	&__blog {
+	&__blog,
+	&__single {
 		position: relative;
 
 		&::before,
@@ -25,6 +26,16 @@
 			bottom: 25rem;
 			left: 0;
 			transform: rotate(180deg);
+		}
+	}
+	
+	&__single {
+		&::after {
+			display: none;
+		}
+
+		.hero h1::before {
+			display: none;
 		}
 	}
 
@@ -98,13 +109,19 @@
 		}
 	}
 
+	&__preview,
 	&__article {
 		position: relative;
 		width: 42rem;
 		min-height: 36rem;
 		margin: 5rem 0;
-		background: $G-00;
 		padding: 2rem;
+		color: $G-04;
+		text-align: justify;
+	}
+
+	&__preview {
+		background: $G-00;
 		border-radius: 3rem;
 		box-shadow: 20px 20px 60px $G-03, -20px -20px 60px $G-00;
 
@@ -146,15 +163,48 @@
 			object-fit: cover;
 		}
 
-		p {
-			color: $G-04;
-			text-align: justify;
-		}
-
 		a.button {
 			display: inline;
 			position: absolute;
 			bottom: 2rem;
+		}
+	}
+
+	&__article {
+		width: 80%;
+
+		h2 {
+			margin: 0;
+			font-weight: 700;
+			font-size: 0.95em;
+			color: $M-01;
+			text-align: left;
+			text-transform: none;
+			text-decoration: none;
+		}
+
+		time {
+			display: inline-block;
+			font-weight: 700;
+			font-size: 1.25em;
+			color: $M-02;
+			margin: 0.5rem 0 2.5rem;
+
+			&::after {
+				content: "";
+				display: block;
+				position: relative;
+				bottom: -1rem;
+				width: 100%;
+				height: 4px;
+				border-radius: 1rem;
+				background: $M-02;
+			}
+		}
+
+		p {
+			margin: 1.5rem 0;
+			font-size: 1.15em;
 		}
 	}
 
@@ -286,28 +336,32 @@
 			padding: 0;
 			mask: url(../img/ico-submit.svg) center / contain no-repeat;
 
-			&:hover,
-			&:focus {
+			&:hover {
+				background: $M-01;
+			}
+
+			&:active {
 				background: $M-01;
 				transform: scale(0.9);
 			}
 		}
 
 		nav {
+			width: 95%;
 			margin-top: 1rem;
 			
 			ul {
-				display: flex;
-				flex-direction: column;
-				align-items: flex-end;
+				display: block;
 
 				li {
+					display: flex;
+					justify-content: space-between;
 					margin: 0.25rem 0;
 
 					a {
 						display: inline-block;
-						margin-right: 0.5rem;
-						font-size: 0.85em;
+						font-weight: 700;
+						font-size: 0.9em;
 						color: $M-01;
 						text-align: right;
 						text-decoration: none;
@@ -333,21 +387,130 @@
 								transition: 300ms ease;
 							}
 						}
-					}
 
-					a + span {
-						display: inline-block;
-						width: 1.25rem;
-						height: 1.25rem;
-						border-radius: 50%;
-						background: $M-02;
-						font-size: 0.85em;
-						color: $M-01;
-						line-height: 1.25rem;
-						text-align: center;
+						& + span {
+							display: inline-block;
+							position: relative;
+							top: -2px;
+							margin-left: auto;
+							width: 1.25rem;
+							height: 1.25rem;
+							border-radius: 50%;
+							background: $M-02;
+							font-weight: 700;
+							font-size: 0.85em;
+							color: $M-01;
+							line-height: 1.25rem;
+							text-align: center;
+						}
 					}
 				}
 			}
 		}
+	}
+
+	nav.prev-next {
+		display: block;
+		margin: 2rem 0;
+
+		ul {
+			display: flex;
+			justify-content: space-between;
+
+			li {
+				position: relative;
+
+				a {
+					display: block;
+					margin: 0.5rem 0;
+					font-size: 1.75em;
+					color: $M-02;
+					text-decoration: none;
+					text-transform: uppercase;
+				}
+
+				img {
+					width: 75px;
+					height: 45px;
+					margin: 0.5rem;
+					object-fit: cover;
+					vertical-align: middle;
+				}
+
+				span {
+					font-size: 1.25em;
+					color: $M-01;
+				}
+
+				&:first-child {
+					a::before {
+						content: "";
+						display: block;
+						position: absolute;
+						top: -0.45rem;
+						left: -2.75rem;
+						width: 3rem;
+						height: 4rem;
+						background: $M-02;
+						mask: url("../img/ico-prev-next.svg") center / contain no-repeat;
+					}
+
+					a:hover::before {
+						animation: move-back 1s ease infinite;
+						animation-fill-mode: both;
+					}
+
+					img {
+						margin-left: 0;
+					}
+				}
+
+				&:last-child {
+					text-align: right;
+
+					a::after {
+						content: "";
+						display: block;
+						position: absolute;
+						top: -0.45rem;
+						right: -2.75rem;
+						width: 3rem;
+						height: 4rem;
+						background: $M-02;
+						mask: url("../img/ico-prev-next.svg") center / contain no-repeat;
+						transform: rotate(180deg);
+					}
+
+					a:hover::after {
+						animation: move-forward 1s ease infinite;
+						animation-fill-mode: both;
+					}
+
+					img {
+						margin-right: 0;
+					}
+				}
+			}
+		}
+	}
+}
+
+@keyframes move-back {
+	25% {
+		transform: translateX(-10px);
+	}
+
+	75% {
+		transform: translateX(10px);
+	}
+}
+
+@keyframes move-forward {
+	25% {
+		transform: translateX(10px) rotate(180deg);
+	}
+
+	75% {
+		transform: translateX(-10px) rotate(180deg);
 	}
 }
