--- a/assets/scss/components/_news.scss
+++ b/assets/scss/components/_news.scss
@@ -172,6 +172,7 @@
 
 	&__article {
 		width: 80%;
+		margin: 5rem 0 2rem;
 
 		h2 {
 			margin: 0;
@@ -411,7 +412,7 @@
 
 	nav.prev-next {
 		display: block;
-		margin: 2rem 0;
+		margin: 2rem 0 6rem;
 
 		ul {
 			display: flex;
