--- a/assets/scss/components/_news.scss
+++ b/assets/scss/components/_news.scss
@@ -43,76 +43,6 @@
 		}
 	}
 
-	&__nav {
-		margin-top: 2rem;
-
-		ul {
-			max-width: 940px;
-			margin: 0 auto;
-
-			display: flex;
-			flex-direction: row;
-			flex-wrap: wrap;
-			align-items: center;
-			justify-content: center;
-
-			li {
-				margin: 0.5rem 0;
-				padding: 0 1rem;
-				height: 1.25rem;
-
-				&:not(:last-child) {
-					border-right: 2px solid $M-01;
-				}
-
-				a {
-					font-size: 1.25em;
-					color: $M-01;
-					text-decoration: none;
-					transition: 200ms ease;
-
-					&::after {
-						content: "";
-						display: block;
-						width: 0;
-						height: 4px;
-						border-radius: 3px;
-						background: $M-02;
-						position: relative;
-						bottom: -0.15rem;
-						transition: 300ms ease;
-					}
-
-					&.current-menu-item {
-						color: $M-02;
-
-						&::after {
-							width: 100%;
-						}
-					}
-
-					&:hover {
-						color: $M-02;
-						transition: 200ms ease;
-
-						&::after {
-							width: 100%;
-							transition: 300ms ease;
-						}
-					}
-				}
-
-				&.current-menu-item a {
-					color: $M-02;
-
-					&::after {
-						width: 100%;
-					}
-				}
-			}
-		}
-	}
-
 	&__preview,
 	&__article {
 		position: relative;
@@ -229,11 +159,19 @@
 
 			margin: 1rem 0;
 
+			@include mobile {
+				flex-direction: column;
+			}
+
 			li figure {
 				position: relative;
 				width: 17rem;
 				margin: 1rem;
 				padding: 0 0.5rem;
+
+				@include mobile {
+					margin: 2rem auto;
+				}
 
 				figcaption {
 					margin: 0.5rem 0;
@@ -295,6 +233,10 @@
 			background: $M-02;
 			mask: url(../img/triangle-right.svg) center/cover no-repeat;
 			z-index: 2;
+			
+			@include mobile {
+				display: none;
+			}
 		}
 	}
 }
