--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -15,6 +15,7 @@
 @use "components/footer";
 
 // components
+@use "components/page-nav";
 @use "components/details";
 @use "components/button";
 @use "components/loading";
