--- a/assets/scss/components/_base.scss
+++ b/assets/scss/components/_base.scss
@@ -34,7 +34,7 @@ body {
 h2 {
 	width: 30ch;
 	margin: 0 auto;
-	font-size: 2em;
+	font-size: clamp(1em, 6vw, 2em);
 	color: $M-01;
 	text-align: center;
 	text-transform: uppercase;
