--- a/assets/scss/components/_benefits.scss
+++ b/assets/scss/components/_benefits.scss
@@ -11,6 +11,11 @@ main .benefits {
 
 		margin: 1rem 0;
 
+		@include mobile {
+			flex-direction: column;
+			margin: 1rem;
+		}
+
 		li {
 			width: 45%;
 			margin: 1.5rem 0;
@@ -18,6 +23,10 @@ main .benefits {
 			font-size: 1.25em;
 			color: $M-01;
 			text-align: center;
+
+			@include mobile {
+				width: unset;
+			}
 
 			&:nth-of-type(2),
 			&:nth-of-type(4) {
