--- a/assets/scss/components/_contactos.scss
+++ b/assets/scss/components/_contactos.scss
@@ -16,17 +16,12 @@
 	clip-path: url(#hero-path);
 }
 
-figure.mapa {
+.map {
 	position: relative;
 	top: -6rem;
-
-	img {
-		display: block;
-		width: 100%;
-		height: 45rem;
-		object-fit: cover;
-		object-position: center;
-	}
+	width: 100%;
+	height: 720px;
+	z-index: -1;
 
 	&::after {
 		content: "";
@@ -38,6 +33,30 @@ figure.mapa {
 		width: 6.5rem;
 		height: 9rem;
 		background: url(../img/pin.svg);
+	}
+}
+
+iframe[src*="google.com/maps"] {
+	width: 100%;
+	height: 720px;
+}
+
+.map-frame {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+figure.mapa {
+	position: relative;
+	top: -6rem;
+
+	img {
+		display: block;
+		width: 100%;
+		height: 45rem;
+		object-fit: cover;
+		object-position: center;
 	}
 }
 
