--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -4,6 +4,10 @@ header {
 	width: min(100%, var(--ww-00));
 	margin: 1rem auto;
 
+	@media (max-width: 991px) {
+		padding: 0 1rem;
+	}
+
 	address {
 		width: 100%;
 		height: 2rem;
@@ -58,6 +62,12 @@ header {
 					background: url(../img/ico-linkedin.svg) center /
 						contain no-repeat;
 				}
+
+				@media (max-width: 991px) {
+					&:nth-child(1) {
+						display: none;
+					}
+				}
 			}
 		}
 	}
@@ -72,6 +82,8 @@ header {
 			width: 250px;
 			height: 45px;
 			background: url(../img/logo-blue.svg) -15px center / cover no-repeat;
+			opacity: 1;
+			transition: all 200ms ease-out;
 		}
 
 		ul.top-nav {
@@ -86,7 +98,7 @@ header {
 				position: relative;
 
 				// Serviços - dropdown
-				&:nth-child(3) {
+				&.menu-item-has-children {
 					// Padding for the dropdown arrow
 					padding-right: 1.125rem;
 					// Redeclaring colours to keep them on submenu hover
@@ -124,7 +136,7 @@ header {
 
 					// Redeclaring pink underlining
 					&:hover::before {
-						width: 4rem;
+						width: 4.25rem;
 						transition: 300ms ease;
 					}
 
@@ -201,34 +213,67 @@ header {
 		}
 
 		// Navbar on mobile
-		@media (max-width: 991px) {
+		@include mobile {
 			position: relative;
 
+			// Hamburger menu on mobile
 			&::after {
 				content: "";
 				position: absolute;
-				top: calc(50% - 2px);
+				top: 2.5rem;
 				right: 1rem;
 				width: 30px;
 				height: 4px;
 				background: $M-02;
 				box-shadow: 0 10px $M-02, 0 -10px $M-02;
+				transition: box-shadow 200ms ease-out;
 			}
 
+			// Menu container on mobile, open
+			&.nav-open {
+				background-color: $G-00;
+				transition: background-color 200ms ease-out;
+
+				a.logo {
+					width: 250px;
+					height: 45px;
+					opacity: 0;
+					transition: 200ms ease-out;
+				}
+
+				&::after {
+					box-shadow: none;
+					transition: box-shadow 200ms ease-out;
+				}
+			}
+
+			// Menu on mobile
 			ul.top-nav {
-				display: none;
-				background: $G-00;
+				display: flex;
 				flex-direction: column;
 				justify-content: center;
-				height: 100vh;
-				animation: fade 0.2s ease-out;
+				align-items: center;
+				height: 2rem;
+				background-color: $G-00;
+				opacity: 0;
+				transition: 200ms ease-out;
+
+				&.menu-open {
+					height: 100vh;
+					opacity: 1;
+					transition: 200ms ease-out;
+
+
+				}
 
 				& > li {
 					flex: 0;
 					opacity: 0;
+					top: -7vh;
+					left: -36vw;
 					animation: enter 0.3s ease-out forwards;
 
-					@for $n from 1 through 5 {
+					@for $n from 1 through 6 {
 						&:nth-child(#{$n}) {
 							animation-delay: 0.1s * ($n - 1);
 						}
@@ -254,14 +299,18 @@ header {
 }
 
 // Submenu
-ul.top-nav li:nth-child(3) ul {
+ul.top-nav li.menu-item-has-children ul {
 	display: none;
 	position: absolute;
-	top: 0;
+	top: 1rem;
 	left: -100%;
 	width: 16rem;
-	padding-top: 3.5rem;
-	z-index: 1;
+	padding-top: 2.5rem;
+	z-index: 3;
+
+	@include mobile {
+		top: -20vh;
+	}
 
 	& > li {
 		flex: 1;
@@ -286,15 +335,27 @@ ul.top-nav li:nth-child(3) ul {
 			color: $M-01;
 			text-decoration: none;
 			text-transform: uppercase;
-			transform: background-color 200ms ease;
+			transform: background-color 200ms ease-out;
 
 			&:hover {
 				background-color: $S-02;
-				transform: background-color 200ms ease;
+				transform: background-color 200ms ease-out;
+			}
+
+			@include mobile {
+				padding: 0.75rem 0.5rem;
+				background: $S-02;
+				transform: background-color 200ms ease-out;
+
+				&:hover {
+					background-color: $G-00;
+					transform: background-color 200ms ease-out;
+				}
 			}
 		}
 
 		@include mobile {
+			padding: 0;
 			background: $S-02;
 		}
 	}
